yaml/rollingupdate.yaml

apiVersion: v1
kind: Service
metadata:
  name: rollingupdate
spec:
  selector:
    app: rollingupdate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollingupdate
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0 
  selector:
    matchLabels:
      app: rollingupdate
  template:
    metadata:
      labels:
        app: rollingupdate
    spec:
      containers:
      - name: rollingupdate
        image: lordofkangs/simple_image:8
        ports:
        - containerPort: 80
