yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix       
            backend:
              service:
                name: wordpress
                port: 
                  number: 80
          - path: /rollingupdate
            pathType: Prefix       
            backend:
              service:
                name: rollingupdate
                port: 
                  number: 80   
          - path: /bluegreen
            pathType: Prefix       
            backend:
              service:
                name: bluegreen
                port: 
                  number: 80
